// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
      <ul
        class="MuiList-root PicassoSelectList-root PicassoSidebarMenu-root"
        role="menu"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`Sidebar with one normal and one bottom menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flex PicassoContainer-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
      <ul
        class="MuiList-root PicassoSelectList-root PicassoSidebarMenu-root"
        role="menu"
        tabindex="-1"
      />
      <ul
        class="MuiList-root PicassoSelectList-root PicassoSidebarMenu-root PicassoSidebarMenu-bottom"
        role="menu"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
